fixed extra whitespace issue, made the username required, made the forms work in HTML hopefully, fixed form in contact: had to make it into a <form> tag... ISSUE: on quizzes the page is reloading on submit and will get rid of the input...

--- a/css/contact-content.css
+++ b/css/contact-content.css
@@ -59,7 +59,7 @@ h4{
 }
 .user-input{
   background-color: #96E0F1;
-  padding: 20px 15px;
+  padding: 20px 50px;
 }
 ul.user-input>li{
   padding: 10px;
@@ -90,4 +90,18 @@ textarea{
   width: 100%;
   height: 80px;
 }
+.sumbits{
+	margin-bottom: 1%;
+	font-size: 100%;
+	height:50px;
+	width: 100px;
+	border-radius: 50px;
+}
 
+fieldset{
+	border: 0;
+}
+input, textarea{
+	margin: 1%;
+	margin-right: 1%;
+}
