--- a/css/quizzes-content.css
+++ b/css/quizzes-content.css
@@ -211,16 +211,12 @@ div.desc {
 }
 
 .sumbits{
-	margin-bottom: 20%;
 	font-size: 100%;
 	height:100px;
 	width: 100px;
 	border-radius: 50px;
 }
 
-/*form{
-	display: inline;
-}*/
 fieldset{
 	border: 0;
 }
